# shuchuan

./: .gitignore  README.md  data-platform.db  docker-compose.yml  processor-protocol.md  test.txt
apps/api/: .env  .env.example  Dockerfile  alembic.ini  data-platform.db  data-platform.db.bak  pyproject.toml
apps/api/app/: bootstrap_admin.py  main.py  test_processor_service.py
apps/api/app/api/: deps.py  processor_auth.py  router.py
apps/api/app/api/routes/: admin_logs.py  admin_users.py  assets.py  auth.py  catalogs.py  deliveries.py  demands.py  processors.py  tasks.py  (+2 more)
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/schemas/: asset.py  auth.py  catalog.py  catalog_asset.py  delivery.py  demand.py  processor.py  quick_task.py  task.py  user.py
apps/api/app/services/: auth_service.py  catalog_service.py  demand_service.py  dispatch_service.py  file_storage.py  operation_log_service.py  processor_service.py  quick_task_service.py  task_service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260412_0001_auth_and_logs.py  20260412_0002_catalogs.py  20260412_0003_demands_assets.py  20260412_0004_tasks_delivery.py  20260412_0005_catalog_upload_method.py  20260412_0006_catalog_assets_and_task_inputs.py  20260414_0007_processors.py
apps/api/tests/: conftest.py  test_auth_api.py  test_catalog_api.py  test_delivery_api.py  test_demand_api.py  test_dispatch.py  test_file_storage.py  test_health_api.py  test_processor_api.py  test_task_api.py  test_task_callbacks.py  test_test_processor_service.py
(+116 files in other folders)
